FIxed hand that was not showing

--- a/src/containers/greeting/Greeting.css
+++ b/src/containers/greeting/Greeting.css
@@ -54,7 +54,8 @@
   height: auto;
 }
 
-.wave-emoji{
+.wave-emoji {
+  display: inline-block;
   animation: wave 1.8s infinite;
 }
 
@@ -144,4 +145,3 @@
     text-align: center;
   }
 }
-
